<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".NewUser">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/miu"
        tools:ignore="MissingConstraints" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:fontFamily="sans-serif-medium"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textSize="24sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="363dp"
        android:layout_marginLeft="@dimen/horizontal_margin_3"
        android:layout_marginTop="15dp"
        android:layout_marginRight="@dimen/horizontal_margin_3"
        app:cardCornerRadius="7dp"
        app:cardElevation="22dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin_8"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="342dp"
                android:layout_marginTop="@dimen/horizontal_margin_8"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="8dp">


                <EditText
                    android:id="@+id/fname"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="6dp"
                    android:hint="@string/personName"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-306dp"
                    android:layout_marginTop="46dp"
                    android:hint="@string/lastName"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/username"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-305dp"
                    android:layout_marginTop="96dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-306dp"
                    android:layout_marginTop="147dp"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="-305dp"
                    android:layout_marginTop="80dp"
                    android:onClick="onRegister"
                    android:text="@string/action_signup"
                    app:layout_constraintTop_toBottomOf="@+id/password"
                    app:layout_constraintVertical_bias="0.2" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="64dp"
                    android:layout_marginBottom="64dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/password"
                    app:layout_constraintStart_toStartOf="@+id/password"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>