<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContactFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:cardCornerRadius="7dp"
        app:cardElevation="22dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/horizontal_margin_8"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textColor="@color/mater_grey_700"
                android:fontFamily="sans-serif-black"
                android:text="My Contacts"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/horizontal_margin_8"
                android:background="@drawable/btn_bg_curved_stroke"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="8dp"
                android:id="@+id/layout1">


                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/contact_phone" />

                <TextView
                    android:id="@+id/txtv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/number"
                    android:textColor="@color/black"
                    android:layout_marginTop="9dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtv11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-110dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/numberl" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/horizontal_margin_8"
                android:background="@drawable/btn_bg_curved_stroke"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="8dp"
                android:id="@+id/layout2">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/contact_email"  />

                <TextView
                    android:id="@+id/txtv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="9dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtv22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-208dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/emaill" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/horizontal_margin_8"
                android:background="@drawable/btn_bg_curved_stroke"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="8dp"
                android:id="@+id/layout3">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/contact_linkedin"/>

                <TextView
                    android:id="@+id/txtv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="9dp"
                    android:text="@string/linkedin"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtv33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-142dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/linkedinl" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/horizontal_margin_8"
                android:background="@drawable/btn_bg_curved_stroke"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="8dp"
                android:id="@+id/layout4">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/contact_github"/>

                <TextView
                    android:id="@+id/txtv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="9dp"
                    android:text="@string/github"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtv44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-90dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/githubl" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/horizontal_margin_8"
                android:background="@drawable/btn_bg_curved_stroke"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="8dp"
                android:id="@+id/layout5">


                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/pdf_icon"/>

                <TextView
                    android:id="@+id/txtv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="9dp"
                    android:text="@string/pdf"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtv55"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-34dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/pdfl" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/horizontal_margin_8"
                android:background="@drawable/btn_bg_curved_stroke"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="8dp"
                android:id="@+id/layout6">


                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/location"/>

                <TextView
                    android:id="@+id/txtv6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="9dp"
                    android:text="@string/mylocation"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtv66"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-83dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/loc" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>