<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WorkFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:cardCornerRadius="7dp"
        app:cardElevation="22dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/horizontal_margin_8"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textColor="@color/mater_grey_700"
                android:fontFamily="sans-serif-black"
                android:text="Work Experience"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/horizontal_margin_8"
                android:background="@drawable/btn_bg_curved_stroke"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="8dp">


                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/mm" />

                <TextView
                    android:id="@+id/txtv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/mm"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtv11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-249dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/mmfield" />

                <TextView
                    android:id="@+id/txtv111"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-305dp"
                    android:layout_marginTop="64dp"
                    android:text="@string/mmdesc" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/horizontal_margin_8"
                android:background="@drawable/btn_bg_curved_stroke"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="8dp">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/tcs"  />

                <TextView
                    android:id="@+id/txtv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/tcs"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtv22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-210dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/tcsfield" />

                <TextView
                    android:id="@+id/txtv222"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-309dp"
                    android:layout_marginTop="64dp"
                    android:text="@string/tcsdesc" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/horizontal_margin_8"
                android:background="@drawable/btn_bg_curved_stroke"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="8dp">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/tcs"/>

                <TextView
                    android:id="@+id/txtv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/tcs"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtv33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-210dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/tcsfield2" />

                <TextView
                    android:id="@+id/txtv333"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-227dp"
                    android:layout_marginTop="64dp"
                    android:text="@string/tcsdesc2" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>


</LinearLayout>