<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:layout_marginLeft="@dimen/horizontal_margin_8"
        android:layout_marginRight="@dimen/horizontal_margin_8"
        app:cardCornerRadius="7dp"
        app:cardElevation="22dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin_8"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="345dp"
                android:layout_marginTop="@dimen/horizontal_margin_8"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="8dp">


                <EditText
                    android:id="@+id/username"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:layout_marginStart="16dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-306dp"
                    android:layout_marginTop="90dp"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="-309dp"
                    android:layout_marginTop="140dp"
                    android:layout_marginBottom="54dp"
                    android:enabled="false"
                    android:text="@string/action_sign_in"
                    app:layout_constraintTop_toBottomOf="@+id/password"
                    app:layout_constraintVertical_bias="0.2" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="64dp"
                    android:layout_marginBottom="64dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/password"
                    app:layout_constraintStart_toStartOf="@+id/password"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3" />

            </LinearLayout>
        </LinearLayout>
  </androidx.cardview.widget.CardView>



</LinearLayout>